--- a/xnbtd/templates/xnbtd/admin/change_list.html
+++ b/xnbtd/templates/xnbtd/admin/change_list.html
@@ -3,23 +3,34 @@
 
 {% block filters %}
   {% if cl.has_filters %}
-  <div id="changelist-filter">
-    <h2>{% translate 'Statistics' %}</h2>
-    <h3>{{ cl.list_statistic }}</h3>
-    {% for column in list_statistic %}
-      <h3>Total {{ column }}: {% calculate_total cl.result_list column %}</h3>
-    {% endfor %}
+    <div id="changelist-filter">
+      <h2>{% translate 'Statistics' %}</h2>
+      <h3>{{ cl.list_statistic }}</h3>
+      {% for column in list_statistic %}
+        <h3>Total {{ column }}: {% calculate_total cl.result_list column %}</h3>
+      {% endfor %}
       <h2>{% translate 'Filter' %}</h2>
-      {% if cl.is_facets_optional or cl.has_active_filters %}<div id="changelist-filter-extra-actions">
-        {% if cl.is_facets_optional %}<h3>
-          {% if cl.add_facets %}<a href="{{ cl.remove_facet_link }}" class="hidelink">{% translate "Hide counts" %}</a>
-          {% else %}<a href="{{ cl.add_facet_link }}" class="viewlink">{% translate "Show counts" %}</a>{% endif %}
-        </h3>{% endif %}
-        {% if cl.has_active_filters %}<h3>
-          <a href="{{ cl.clear_all_filters_qs }}">&#10006; {% translate "Clear all filters" %}</a>
-        </h3>{% endif %}
-      </div>{% endif %}
-      {% for spec in cl.filter_specs %}{% admin_list_filter cl spec %}{% endfor %}
+      {% if cl.is_facets_optional or cl.has_active_filters %}
+        <div id="changelist-filter-extra-actions">
+          {% if cl.is_facets_optional %}
+            <h3>
+              {% if cl.add_facets %}
+                <a href="{{ cl.remove_facet_link }}" class="hidelink">{% translate "Hide counts" %}</a>
+              {% else %}
+                <a href="{{ cl.add_facet_link }}" class="viewlink">{% translate "Show counts" %}</a>
+              {% endif %}
+            </h3>
+          {% endif %}
+          {% if cl.has_active_filters %}
+            <h3>
+              <a href="{{ cl.clear_all_filters_qs }}">&#10006; {% translate "Clear all filters" %}</a>
+            </h3>
+          {% endif %}
+        </div>
+      {% endif %}
+      {% for spec in cl.filter_specs %}
+        {% admin_list_filter cl spec %}
+      {% endfor %}
     </div>
   {% endif %}
 {% endblock %}
